chunk output to console

--- a/dplyr-tutorial-2.Rmd
+++ b/dplyr-tutorial-2.Rmd
@@ -1,6 +1,8 @@
 ---
 title: 'Going deeper with dplyr: New features in 0.3 and 0.4'
 output: html_document
+editor_options: 
+  chunk_output_type: console
 ---
 
 ## Introduction
